; ModuleID = '/home/carl/AnghaBench/radare2/shlr/tcc/extr_tccpp.c_skip.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/tcc/extr_tccpp.c_skip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tok = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"'%c' expected (got \22%s\22)\00", align 1
@tokc = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @skip(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @tok, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp ne i32 %3, %4
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* @tok, align 4
  %9 = call i32 @get_tok_str(i32 %8, i32* @tokc)
  %10 = call i32 @tcc_error(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %7, i32 %9)
  br label %11

11:                                               ; preds = %6, %1
  %12 = call i32 (...) @next()
  ret void
}

declare dso_local i32 @tcc_error(i8*, i32, i32) #1

declare dso_local i32 @get_tok_str(i32, i32*) #1

declare dso_local i32 @next(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
